--- a/GDPHYS/GDPHYS.vcxproj
+++ b/GDPHYS/GDPHYS.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Assignments\DragForceGenerator.cpp" />
     <ClCompile Include="Assignments\Springs\BungeeSpring.cpp" />
     <ClCompile Include="Assignments\Collision\ContactResolver.cpp" />
+    <ClCompile Include="Assignments\Springs\CableSpring.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Assignments\MyParticle.cpp" />
     <ClCompile Include="Assignments\MyVector.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="Assignments\Collision\ContactResolver.h" />
     <ClInclude Include="Assignments\Links\ParticleLink.h" />
     <ClInclude Include="Assignments\Links\Rod.h" />
+    <ClInclude Include="Assignments\Springs\CableSpring.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
