--- a/GDPHYS/GDPHYS.vcxproj.filters
+++ b/GDPHYS/GDPHYS.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Assignments\Links\Rod.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Assignments\Springs\CableSpring.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Assignments\MyParticle.h">
@@ -114,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Assignments\Links\Rod.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Assignments\Springs\CableSpring.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
