--- a/GDPHYS/GDPHYS.vcxproj
+++ b/GDPHYS/GDPHYS.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="Assignments\Springs\BungeeSpring.cpp" />
     <ClCompile Include="Assignments\Collision\ContactResolver.cpp" />
     <ClCompile Include="Assignments\Springs\CableSpring.cpp" />
+    <ClCompile Include="Assignments\Links\Cable.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Assignments\MyParticle.cpp" />
     <ClCompile Include="Assignments\MyVector.cpp" />
@@ -182,6 +183,7 @@
     <ClInclude Include="Assignments\Links\ParticleLink.h" />
     <ClInclude Include="Assignments\Links\Rod.h" />
     <ClInclude Include="Assignments\Springs\CableSpring.h" />
+    <ClInclude Include="Assignments\Links\Cable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
